support for PostgreSQL added